<?xml version="1.0" encoding="utf-8"?>
<resources>

  <!-- Application strings -->
  <string name="appName">Dungeon Mapper</string>
  <!-- Activity/Fragment titles -->
  <string name="title_terrainList">Terrains</string>
  <string name="title_terrainDetail">Terrain Detail</string>

  <!-- EditWorldPropsFragment toast strings -->
  <string name="toast_worlds_loaded">%1$s worlds loaded successfully.</string>
  <string name="toast_worlds_load_error">A fatal error occurred loading worlds.</string>
  <string name="toast_world_load_error">A fatal error occurred loading world %1$s.</string>
  <string name="toast_world_saved">World saved successfully.</string>
  <string name="toast_world_save_error">A fatal error occurred saving world %1$s.</string>
  <string name="toast_worlds_deleted">%1$s world deleted successfully.</string>
  <string name="toast_worlds_deleted_error">A fatal error occurred deleting world.</string>
  <string name="toast_loading_regions">Loading regions...</string>
  <string name="toast_regions_loaded">%1$s regions loaded successfully.</string>
  <string name="toast_regions_load_error">A fatal error occurred loading regions for world %1$s.</string>
  <string name="toast_region_saved">Region saved successfully.</string>
  <string name="toast_region_save_error">A fatal error occurred saving region %1$s.</string>
  <string name="toast_cell_exit_types_loaded">%1$s cell exit types loaded successfully.</string>
  <string name="toast_cell_exit_types_load_error">A fatal error occurred loading cell exit types.</string>
  <string name="toast_terrains_loaded">%1$s terrains loaded successfully.</string>
  <string name="toast_terrains_load_error">A fatal error occurred loading terrains.</string>

  <!-- Name/Timestamps list row header strings -->
  <string name="label_name">Name</string>
  <string name="label_created">Created</string>
  <string name="label_modified">Modified</string>

  <!-- Shared view label strings -->
  <string name="label_bitmap">BITMAP</string>

  <!-- Terrain strings -->
  <string name="defaultTerrainName">New Terrain</string>
  <string name="label_editTerrains">Manage terrains</string>
  <string name="label_displayNamesCaps">DISPLAY NAMES</string>
  <string name="label_displayName">Display name</string>
  <string name="label_newTerrain">New terrain</string>
  <string name="label_terrainName">Terrain name</string>
  <string name="validation_cannotModifyAppResources">App resources cannot be modified.</string>
  <string name="validation_wrongSize">The image must be %1$d pixels wide and tall.</string>
  <string name="validation_terrainNameRequired">Please enter a terrain name.</string>
  <string name="validation_displayNameRequired">Please enter a display name.</string>
  <string name="validation_uniqueTerrainName">That name is already in use. Please enter a unique name.</string>
  <string name="message_noTerrainSet">No terrain set</string>
  <string name="message_terrainSaved">Saved Terrain %1$s</string>
  <string name="message_terrainSaveFailed">Failed to save Terrain %1$s</string>

  <!-- FileSelectorDialogFragment strings -->
  <string name="alert_fs_title">Choose a %1$s file. Current Path = %2$s</string>

  <!-- DbExportedDialogFragment string -->
  <string name="alert_db_exported_msg">Database successfully exported to %1$s</string>

  <!-- DbImportDialogFragment string -->
  <string name="alert_db_import_title">How do you want to handle world name conflicts?</string>
  <string name="alert_db_import_choice_overwrite">Overwrite existing world.</string>
  <string name="alert_db_import_choice_keep">Keep existing world.</string>
  <string name="toast_db_imported">DB successfully imported!</string>

  <!-- World strings -->
  <string name="defaultWorldName">New World</string>
  <string name="label_actionNewWorld">New world</string>
  <string name="label_actionExport">Export all data</string>
  <string name="label_actionImport">Import all data</string>
  <string name="label_worldName">World name</string>
  <string name="label_zeroBasedCoordinates">ZERO BASED MAP COORDINATES</string>
  <string name="label_newWorld">New World</string>
  <string name="label_originLoc">ORIGIN LOCATION</string>
  <string name="label_regionWidth">REGION WIDTH</string>
  <string name="label_regionHeight">REGION HEIGHT</string>
  <string name="label_editWorld">Edit World</string>
  <string name="label_deleteWorld">Delete World</string>
  <string name="label_worldProps">World Properties</string>
  <string name="validation_worldNameRequired">Please enter a world name.</string>

  <!-- Region strings -->
  <string name="defaultRegionName">New Region</string>
  <string name="label_newRegion">New region</string>
  <string name="label_regionDetails">Region details</string>
  <string name="label_showGrid">Show grid</string>
  <string name="label_hideGrid">Hide grid</string>
  <string name="label_dottedGrid">Dotted grid lines</string>
  <string name="label_fillRegion">Fill entire region</string>
  <string name="label_show_palette">Show palette</string>
  <string name="label_hide_palette">Hide palette</string>
  <string name="label_editRegion">Edit Region</string>
  <string name="label_deleteRegion">Delete Region...</string>
  <string name="validation_RegionNameRequired">Please enter a region name.</string>
  <string name="validation_widthTooSmall">Please enter a width &gt; 0.</string>
  <string name="validation_widthTooLarge">Please enter a width &lt; %1$s.</string>
  <string name="validation_heightTooSmall">Please enter a width &gt; 0.</string>
  <string name="validation_heightTooLarge">Please enter a width &lt; %1$s.</string>
  <string name="message_regionViewToolTip">Cell %1$d, %2$d\n%3$s</string>
  <string name="message_uniqueRegionName">Region names must be unique.</string>
  <string name="message_regionSaved">Saved Region: %1$s for World: %2$s</string>
  <string name="message_regionCellSaved">Saved RegionCell at: %1$d,%2$d for Region: %3$s</string>
  <string name="message_cellsLoaded">Cells loaded for Region: %1$s.</string>
  <string name="message_regionSaveFailed">Failed to save Region: %1$s for World: %2$s</string>
  <string name="message_regionCellSaveFailed">Failed to save RegionCell at: %1$d,%2$d for Region: %3$s</string>
  <string name="message_cellsLoadFailed">Failed to load cells for region: %1$s.</string>

  <!-- Settings strings -->
  <string name="label_settings">Settings</string>

  <!-- App defined terrain strings -->
  <string name="empty">Empty</string>
  <string name="water">Water</string>
  <string name="forest">Forest</string>
  <string name="desert">Desert</string>
  <string name="grass">Grass</string>

  <!-- Origin name strings -->
  <string name="southwest">Southwest</string>
  <string name="southeast">Southeast</string>
  <string name="northwest">Northwest</string>
  <string name="northeast">Northeast</string>
  <string name="bottomLeft">Bottom left</string>
  <string name="bottomRight">Bottom right</string>
  <string name="topLeft">Top left</string>
  <string name="topRight">Top right</string>

  <!-- App defined cell exit names -->
  <string name="open">Open</string>
  <string name="door">Door</string>
  <string name="secretDoor">Secret door</string>
  <string name="impassible">Impassible</string>
  <string name="stairsUp">Stairs up</string>
  <string name="stairsDown">Stairs down</string>

  <!-- Exception strings -->
  <string name="exception_dbAccessError">Unable to access database.</string>
  <string name="exception_versionMismatch">Your data cannot be loaded by this version of the app.</string>
  <string name="exception_errorOpeningForWrite">Unable to save file.</string>
  <string name="exception_dirNotCreated">Could not create directory %1$s</string>
  <string name="exception_externalStorageNotAvailable">Cannot load %1$s. External Storage is unavailable.</string>
  <string name="exception_terrainLoadError">Error loading Terrains.</string>
  <string name="exception_terrainNotSaved">Terrain not saved.</string>
  <string name="exception_terrainNotRemoved">Terrain not removed.</string>
  <string name="exception_worldLoadError">Unable to load World with id = %1$d.</string>
  <string name="exception_worldNotSaved">World not saved.</string>
  <string name="exception_worldNotRemoved">World not removed.</string>
  <string name="exception_regionLoadError">Unable to load Region %1$s for World %2$s.</string>
  <string name="exception_regionNotSaved">Region %1$s for World %2$s not saved.</string>
  <string name="exception_regionNotRemoved">Map not removed.</string>
  <string name="exception_cellExitNotSaved">Cell exit not saved.</string>
  <string name="exception_cellExitNotRemoved">Cell exit not removed.</string>
  <string name="exception_cellLoadError">Unable to load Cell at %1$d, %2$d in Region %3$s for World %4$s.</string>
  <string name="exception_cellNotSaved">Cell at %1$d, %2$d in Region %3$s for World %4$s not saved.</string>
  <string name="exception_cellNotRemoved">Cell not removed.</string>

  <string-array name="orientation_names">
    <item>@string/southwest</item>
    <item>@string/southeast</item>
    <item>@string/northwest</item>
    <item>@string/northeast</item>
    <item>@string/bottomLeft</item>
    <item>@string/bottomRight</item>
    <item>@string/topLeft</item>
    <item>@string/topRight</item>
  </string-array>
</resources>
